--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <h1>Hello, Git!</h1>
 
     <div class="d-flex flex-column bd-highlight mb-3">
-        <div class="p-2 bd-highlight">Flex item 1</div>
-        <div class="p-2 bd-highlight">Flex item 2</div>
-        <div class="p-2 bd-highlight">Flex item 3</div>
+        <div class="p-2 bd-highlight">1</div>
+        <div class="p-2 bd-highlight">2</div>
+        <div class="p-2 bd-highlight">3</div>
     </div>
     <div class="d-flex flex-column-reverse bd-highlight">
-        <div class="p-2 bd-highlight">Flex item 1</div>
-        <div class="p-2 bd-highlight">Flex item 2</div>
-        <div class="p-2 bd-highlight">Flex item 3</div>
+        <div class="p-2 bd-highlight">4</div>
+        <div class="p-2 bd-highlight">5</div>
+        <div class="p-2 bd-highlight">6</div>
     </div>
 
 </body>
