--- a/index_alina.html
+++ b/index_alina.html
@@ -17,40 +17,54 @@
     <h1>Hello!</h1>
 
     <div class="container">
-        <div class="row row-cols-2 row-cols-lg-5  row justify-content-md-center">
+        <div class="row row-cols-2 row-cols-lg-4  row justify-content-md-center">
 
-            <div class="col">
-                <div class="col col-lg-10 p-3 border bg-light">
-                    Column 1
-                </div>
-
-                <div class="col col-lg-10 p-3 border bg-light">
-                    Column 2
-                </div>
+            <div class="col p-3">
+                <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 1</div>
+                <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 2 </div>
             </div>
 
-            <div class="col-12">
-                <div class="col col-lg-20 p-3 border bg-light">
-                    Column 3
-                </div>
-                <div class=" col col-lg-20 p-3 border bg-light">
-                    Column 4
-                </div>
+            <div class="col p-3">
+                <div class="col col-lg-40 p-3 border bg-light mh-100" style="height: 200px;"> Column 3 </div>
+                <div class=" col col-lg-40 p-3 border bg-light mh-100" style="height: 200px;"> Column 4</div>
 
             </div>
 
-            <div class="col">
-                <div class="col col-lg-10 p-3 border bg-light">
-                    Column 5
+            <div class="col p-3">
+                <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 400px;"> Column 5 </div>
+            </div>
+
+        </div>
+
+        <div class="container">
+
+            <div class=" row row-cols-2 row-cols-lg-4 row justify-content-md-center">
+                <div class="col col-lg-9 p-3 border bg-light mh-100" style="height: 200px;">Column 11</div>
+            </div>
+
+            <div class=" row row-cols-2 row-cols-lg-4  row justify-content-md-center">
+                <div class="col p-3">
+                    <div class="col col-lg-40 p-3 border bg-light mh-100" style="height: 400px;"> Column 12</div>
+                </div>
+                <div class="col p-3">
+                    <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 13</div>
+                    <div class=" col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 14</div>
+                </div>
+
+                <div class="col p-3">
+                    <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 400px;">Column 15
+                    </div>
                 </div>
             </div>
 
         </div>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+
+
+        <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+            </script>
 
 </body>
 
