--- a/index_alina.html
+++ b/index_alina.html
@@ -17,42 +17,53 @@
     <h1>Hello!</h1>
 
     <div class="container">
-        <div class="row row-cols-2 row-cols-lg-4  row justify-content-md-center">
+        <div class="d-flex row row-cols-2 row-cols-lg-4  row justify-content-md-center">
 
             <div class="col p-3">
-                <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 1</div>
-                <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 2 </div>
+                <div class="col col-lg-20 p-3 border bg-light mh-100 shadow-sm mb-0 bg-body rounded"
+                    style="height: 200px;">Column 1</div>
+                <div class="col col-lg-20 p-3 border bg-light mh-100 shadow-sm mb-0 bg-body rounded"
+                    style="height: 200px;">Column 2 </div>
             </div>
 
             <div class="col p-3">
-                <div class="col col-lg-40 p-3 border bg-light mh-100" style="height: 200px;"> Column 3 </div>
-                <div class=" col col-lg-40 p-3 border bg-light mh-100" style="height: 200px;"> Column 4</div>
+                <div class="col col-lg-40 p-3 border bg-light mh-100 shadow-sm mb-0 bg-body rounded"
+                    style="height: 200px;"> Column 3 </div>
+                <div class=" col col-lg-40 p-3 border bg-light mh-100 shadow-sm mb-0 bg-body rounded"
+                    style="height: 200px;"> Column 4</div>
 
             </div>
 
             <div class="col p-3">
-                <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 400px;"> Column 5 </div>
+                <div class="col col-lg-20 p-3 border bg-light mh-100 shadow-sm mb-5 bg-body rounded"
+                    style="height: 400px;"> Column 5 </div>
             </div>
 
         </div>
 
         <div class="container">
 
-            <div class=" row row-cols-2 row-cols-lg-4 row justify-content-md-center">
-                <div class="col col-lg-9 p-3 border bg-light mh-100" style="height: 200px;">Column 11</div>
+            <div class="d-flex row row-cols-lg-4 row justify-content-md-center">
+                <div class="col col-lg-9 p-3 border bg-light mh-100 shadow-sm mb-5 bg-body rounded"
+                    style="height: 200px;">
+                    Column 11</div>
             </div>
 
-            <div class=" row row-cols-2 row-cols-lg-4  row justify-content-md-center">
+            <div class="d-flex row row-cols-2 row-cols-lg-4  row justify-content-md-center">
                 <div class="col p-3">
-                    <div class="col col-lg-40 p-3 border bg-light mh-100" style="height: 400px;"> Column 12</div>
+                    <div class="col col-lg-40 p-3 border bg-light mh-100 shadow-sm mb-5 bg-body rounded"
+                        style="height: 400px;"> Column 12</div>
                 </div>
                 <div class="col p-3">
-                    <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 13</div>
-                    <div class=" col col-lg-20 p-3 border bg-light mh-100" style="height: 200px;">Column 14</div>
+                    <div class="col col-lg-20 p-3 border bg-light mh-100 shadow-sm mb-0 bg-body rounded"
+                        style="height: 200px;">Column 13</div>
+                    <div class=" col col-lg-20 p-3 border bg-light mh-100 shadow-sm mb-0 bg-body rounded"
+                        style="height: 200px;">Column 14</div>
                 </div>
 
                 <div class="col p-3">
-                    <div class="col col-lg-20 p-3 border bg-light mh-100" style="height: 400px;">Column 15
+                    <div class="col col-lg-20 p-3 border bg-light mh-100 shadow-sm mb-5 bg-body rounded"
+                        style="height: 400px;">Column 15
                     </div>
                 </div>
             </div>
